Pagine "area_personale"

--- a/area_personale/profilo.html
+++ b/area_personale/profilo.html
@@ -115,7 +115,7 @@
                             <!-- login -->
 
                             <li class="dropdown">
-                                <a href="../#" class="dropdown-toggle" data-toggle="dropdown">Login<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
                                 <ul class="dropdown-menu" role="menuitem" style="min-width: 250px;">
                                     <li>
                                         <form class="form" role="form" id="login">
@@ -167,7 +167,7 @@
                             <!-- search bar a scomparsa -->
 
                             <li class="dropdown visible-sm ">
-                                <a href="../# " class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-search"></span></a>
+                                <a href="# " class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-search"></span></a>
                                 <ul class="dropdown-menu" role="menuitem">
                                     <li>
                                         <form class="navbar-form navbar-left visible-sm" role="search">
@@ -221,11 +221,11 @@
 
                     <div class="list-group">
                         <span class="list-group-item list-group-item-default">Area personale</span>
-                        <a href="../area_personale/profilo.html" class="list-group-item active"><i class="fa fa-user"></i> Profilo</a>
-                        <a href="../area_personale/carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
-                        <a href="../area_personale/acquisti.html" class="list-group-item"><i class="fa fa-credit-card"></i> I miei acquisti</a>
-                        <a href="../area_personale/recensioni_maldive.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
-                        <a href="../area_personale/impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
+                        <a href="profilo.html" class="list-group-item active"><i class="fa fa-user"></i> Profilo</a>
+                        <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
+                        <a href="acquisti.html" class="list-group-item"><i class="fa fa-credit-card"></i> I miei acquisti</a>
+                        <a href="recensioni_maldive.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
                 </div>
@@ -431,7 +431,7 @@
                                 </div>
                             </div>
 
-                            <p><a class="btn btn-default" href="../area_personale/profilo-modifica.html" role="button">Modifica informazioni</a></p>
+                            <p><a class="btn btn-default" href="profilo-modifica.html" role="button">Modifica informazioni</a></p>
                             
                         </div>
 
@@ -536,33 +536,33 @@
                                     <div class="col-sm-4">
                                         <li>
                                             <p class="white">Azienda</p>
-                                            <p> <a href="azienda/chi_siamo.html">Chi siamo</a>
+                                            <p> <a href="../azienda/chi_siamo.html">Chi siamo</a>
                                                 <br/>
-                                                <a href="azienda/contatti.html">Sede e contatti</a>
+                                                <a href="../azienda/contatti.html">Sede e contatti</a>
                                                 <br/>
-                                                <a href="azienda/lavori_stagionali.html">Lavora con noi</a>
+                                                <a href="../azienda/lavori_stagionali.html">Lavora con noi</a>
                                             </p>
                                         </li>
                                     </div>
                                     <div class="col-sm-3 col-sm-offset-1">
                                         <li>
                                             <p class="white">Viaggi più richiesti</p>
-                                            <p> <a href="viaggi/europa/berlino.html">Berlino</a>
+                                            <p> <a href="../viaggi/europa/berlino.html">Berlino</a>
                                                 <br/>
-                                                <a href="viaggi/america/ottawa.html">Ottawa</a>
+                                                <a href="../viaggi/america/ottawa.html">Ottawa</a>
                                                 <br/>
-                                                <a href="viaggi/oceania/sydney.html">Sydney</a>
+                                                <a href="../viaggi/oceania/sydney.html">Sydney</a>
                                             </p>
                                         </li>
                                     </div>
                                     <div class="col-sm-3 col-sm-offset-1">
                                         <li>
                                             <p class="white">Link utili</p>
-                                            <p> <a href="FAQ.html">FAQ</a>
+                                            <p> <a href="../FAQ.html">FAQ</a>
                                                 <br/>
-                                                <a href="azienda/sicurezza.html">Informativa sulla Privacy</a>
+                                                <a href="../azienda/sicurezza.html">Informativa sulla Privacy</a>
                                                 <br/>
-                                                <a href="azienda/tos.html">Termini di Servizio</a>
+                                                <a href="../azienda/tos.html">Termini di Servizio</a>
                                                 <br/>
                                             </p>
                                         </li>
@@ -574,7 +574,7 @@
                             <!-- RIGA COPYRIGHT -->
 
                             <div class="row" id="copyright">
-                                <p class="pull-left">Glas Travels &reg; 2015 | <a href="sitemap.html">Mappa del sito</a>
+                                <p class="pull-left">Glas Travels &reg; 2015 | <a href="../sitemap.html">Mappa del sito</a>
                                 </p>
                                 <p class="pull-right"><a href="#">Top</a>
                                 </p>
