--- a/area_personale/profilo.html
+++ b/area_personale/profilo.html
@@ -72,7 +72,7 @@
 
                             <!-- Viaggi -->
 
-                            <li class="dropdown"><a href="../#" class="dropdown-toggle" data-toggle="dropdown">Viaggi<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
+                            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Viaggi<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="../viaggi/africa.html"><i class="mg map-glb-af mg-fw"></i>&nbsp; Africa</a>
                                     </li>
@@ -89,7 +89,7 @@
 
                             <!-- Azienda -->
 
-                            <li class="dropdown"><a href="../#" class="dropdown-toggle" data-toggle="dropdown">Azienda<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
+                            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Azienda<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="../azienda/chi_siamo.html"><i class="fa fa-user"></i>&nbsp;&nbsp; Profilo aziendale</a>
                                     </li>
@@ -132,8 +132,8 @@
                                                     <input type="checkbox">Ricordami
                                                 </label>
                                             </div>
-                                            <a class="btn btn-success btn-block" href="../area_personale/profilo.html">Accedi</a>
-                                            <a class="btn btn-primary btn-block" href="../area_personale/profilo.html"><span class="fa fa-facebook" style="width: 15px;"></span> Accedi con Facebook
+                                            <a class="btn btn-success btn-block" href="profilo.html">Accedi</a>
+                                            <a class="btn btn-primary btn-block" href="profilo.html"><span class="fa fa-facebook" style="width: 15px;"></span> Accedi con Facebook
                                             </a>
                                             <hr/>
                                             <p class="text-center" style="margin-top: 0px; margin-bottom: 0px;">Non sei registrato? <a href="../registrazione.html">Clicca qui!</a>
@@ -143,7 +143,7 @@
                                 </ul>
                             </li>
 
-                            <li><a href="../area_personale/carrello.html"><i class="fa fa-shopping-cart"></i> <span class="badge">1</span></a>
+                            <li><a href="carrello.html"><i class="fa fa-shopping-cart"></i> <span class="badge">1</span></a>
                             </li>
                         </ul>
 
