--- a/area_personale/acquisti.html
+++ b/area_personale/acquisti.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Glas Travels">
     <meta name="description" content="La compagnia di viaggi #1 al mondo!">
     <title>Glas Travels | Area personale</title>
-    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+    <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -362,7 +362,7 @@
 
     <!-- SCRIPTS -->
 
-    ♦<!-- Bootstrap Javascript Core-->
+    <!-- Bootstrap Javascript Core-->
     <script src="../js/bootstrap.min.js"></script>
 
 </body>
