--- a/azienda/contatti.html
+++ b/azienda/contatti.html
@@ -92,17 +92,17 @@
 
                             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Azienda<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="../azienda/chi_siamo.html"><i class="fa fa-user"></i>&nbsp;&nbsp; Profilo aziendale</a>
+                                    <li><a href="chi_siamo.html"><i class="fa fa-user"></i>&nbsp;&nbsp; Profilo aziendale</a>
                                     </li>
-                                    <li><a href="../azienda/business.html"><i class="fa fa-line-chart"></i>&nbsp; Business</a>
+                                    <li><a href="business.html"><i class="fa fa-line-chart"></i>&nbsp; Business</a>
                                     </li>
-                                    <li><a href="../azienda/sicurezza.html"><i class="md md-vpn-lock"></i>&nbsp; Sicurezza &amp; Privacy</a>
+                                    <li><a href="sicurezza.html"><i class="md md-vpn-lock"></i>&nbsp; Sicurezza &amp; Privacy</a>
                                     </li>
-                                    <li><a href="../azienda/tos.html"><i class="md md-info-outline"></i>&nbsp; Termini e Condizioni</a>
+                                    <li><a href="tos.html"><i class="md md-info-outline"></i>&nbsp; Termini e Condizioni</a>
                                     </li>
-                                    <li><a href="../azienda/contatti.html"><i class="md md-email"></i>&nbsp; Contattaci</a>
+                                    <li><a href="contatti.html"><i class="md md-email"></i>&nbsp; Contattaci</a>
                                     </li>
-                                    <li><a href="../azienda/lavori_stagionali.html"><i class="md md-work"></i>&nbsp; Lavora con Noi</a>
+                                    <li><a href="lavori_stagionali.html"><i class="md md-work"></i>&nbsp; Lavora con Noi</a>
                                     </li>
                                 </ul>
                             </li>
@@ -133,8 +133,8 @@
                                                     <input type="checkbox">Ricordami
                                                 </label>
                                             </div>
-                                            <a class="btn btn-success btn-block" href="profilo.html">Accedi</a>
-                                            <a class="btn btn-primary btn-block" href="profilo.html"><span class="fa fa-facebook" style="width: 15px;"></span> Accedi con Facebook
+                                            <a class="btn btn-success btn-block" href="../area_personale/profilo.html">Accedi</a>
+                                            <a class="btn btn-primary btn-block" href="../area_personale/profilo.html"><span class="fa fa-facebook" style="width: 15px;"></span> Accedi con Facebook
                                             </a>
                                             <hr/>
                                             <p class="text-center" style="margin-top: 0px; margin-bottom: 0px;">Non sei registrato? <a href="../registrazione.html">Clicca qui!</a>
@@ -144,7 +144,7 @@
                                 </ul>
                             </li>
 
-                            <li><a href="carrello.html"><i class="fa fa-shopping-cart"></i> <span class="badge">1</span></a>
+                            <li><a href="../area_personale/carrello.html"><i class="fa fa-shopping-cart"></i> <span class="badge">1</span></a>
                             </li>
                         </ul>
 
@@ -340,11 +340,11 @@
                                     <div class="col-sm-4">
                                         <li>
                                             <p class="white">Azienda</p>
-                                            <p> <a href="../azienda/chi_siamo.html">Chi siamo</a>
+                                            <p> <a href="chi_siamo.html">Chi siamo</a>
                                                 <br/>
-                                                <a href="../azienda/contatti.html">Sede e contatti</a>
+                                                <a href="contatti.html">Sede e contatti</a>
                                                 <br/>
-                                                <a href="../azienda/lavori_stagionali.html">Lavora con noi</a>
+                                                <a href="lavori_stagionali.html">Lavora con noi</a>
                                             </p>
                                         </li>
                                     </div>
@@ -364,9 +364,9 @@
                                             <p class="white">Link utili</p>
                                             <p> <a href="../FAQ.html">FAQ</a>
                                                 <br/>
-                                                <a href="../azienda/sicurezza.html">Informativa sulla Privacy</a>
+                                                <a href="sicurezza.html">Informativa sulla Privacy</a>
                                                 <br/>
-                                                <a href="../azienda/tos.html">Termini di Servizio</a>
+                                                <a href="tos.html">Termini di Servizio</a>
                                                 <br/>
                                             </p>
                                         </li>
