--- a/viaggi/acquisto-viaggio_transazione.html
+++ b/viaggi/acquisto-viaggio_transazione.html
@@ -9,26 +9,26 @@
     <meta name="author" content="Glas Travels">
     <meta name="description" content="Processo di pagamento telematico.">
     <title>SETEFI | Pagamenti online</title>
-    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+    <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Bootstrap -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Main CSS -->
-    <link href="/css/main.css" rel="stylesheet">
+    <link href="../css/main.css" rel="stylesheet">
 
     <!-- FontAwesome -->
-    <link href="/fontawesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/fontawesome/css/font-awesome.css" rel="stylesheet">
+    <link href="../fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../fontawesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- MapGlyphs -->
-    <link href="/mapglyphs/mapglyphs.css" rel="stylesheet">
+    <link href="../mapglyphs/mapglyphs.css" rel="stylesheet">
 
     <!-- Material Design iconic font -->
-    <link href="/material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
+    <link href="../material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
 
 </head>
 
@@ -48,7 +48,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                         <div class="row">
-                            <img class="center-block" src="/img/pagamenti_accettati.png">
+                            <img class="center-block" src="../img/pagamenti_accettati.png">
                         </div>
                 </div>
                 <div class="panel-body">
@@ -99,7 +99,7 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12">
-                                <a href="/area_personale/acquisti_conparigi.html" class="btn btn-success btn-lg btn-block" type="submit">Paga</a>
+                                <a href="../area_personale/acquisti_conparigi.html" class="btn btn-success btn-lg btn-block" type="submit">Paga</a>
                             </div>
                         </div>
                         <div class="row" style="display:none;">
