--- a/viaggi/oceania/isole-fiji.html
+++ b/viaggi/oceania/isole-fiji.html
@@ -200,7 +200,7 @@
             <!-- PATH -->
 
             <ol class="breadcrumb" id="path">
-                <li><a href="/index.html">Home</a>
+                <li><a href="../../index.html">Home</a>
                 </li>
                 <li>Viaggi
                 </li>
